[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-graph-kit"
version = "1.0.0"
description = "Local knowledge graph for AI code review. Parses any codebase into a semantic graph so AI assistants read only what matters."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "Your Team"}]
keywords = ["code-graph", "ai", "mcp", "code-review", "static-analysis", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

# No hard runtime dependencies — stdlib only for core functionality
dependencies = []

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.0"]
watch = ["watchdog>=3.0.0"]
reranker = ["sentence-transformers>=2.2.0"]
languages = ["tree-sitter-languages>=1.10.2"]  # AST parsing for 15+ languages
all = [
    "sentence-transformers>=2.2.0",
    "watchdog>=3.0.0",
    "tree-sitter-languages>=1.10.2",
]

[project.scripts]
code-graph-kit = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
src = ["frontend/*.html"]
